[package]
name = "tasks"
version = "0.1.0"
authors = ["andrew webber (personal) <andrewvwebber@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
